deploy/k8s/opa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels: { app: opa }
  template:
    metadata: { labels: { app: opa } }
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:0.65.0-rootless
          ports:
            - containerPort: 8181
          args:
            - "run"
            - "--server"
            - "--addr=0.0.0.0:8181"
            - "/policies"
          volumeMounts:
            - readOnly: true
              mountPath: /policies
              name: opa-policy
      volumes:
        - name: opa-policy
          configMap:
            name: opa-policy
---
apiVersion: v1
kind: Service
metadata:
  name: opa
spec:
  selector: { app: opa }
  ports: [{ port: 8181, targetPort: 8181 }]
