deploy/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intelgraph-server
spec:
  replicas: 1
  selector: { matchLabels: { app: intelgraph-server } }
  template:
    metadata:
      labels: { app: intelgraph-server }
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: server
          image: ghcr.io/yourorg/intelgraph-server:latest
          ports: [{ containerPort: 4000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: intelgraph-server
spec:
  selector: { app: intelgraph-server }
  ports: [{ port: 4000, targetPort: 4000 }]
